...
import UIKit
import Foundation

class CardManager: NSObject {
    static let card1 = Card(title: "1) The Toast", short_title: "The Toast",  rule_description: "\"Cheers to the last time we will all be friends!\" The Roller must start the game off by proposing a group toast.", rules: nil, image: UIImage(named: "the_toast.png")!)
    
    static let card2 = Card(title: "2) Name Master", short_title: "Name Master", rule_description: "The Roller must assign each player with a new name (or draw random below) to replace everyone's lame birth names. They may enforce these names for the remainder of the game by handing out the Loser Penalty to anyone who forgets to use them."
        , rules: [
            "Everyone is \"Peasant\"",
            "Everyone is \"Vin Diesel\"",
            "Everyone is a type of Jungle Animal (as determined by the Name Master)",
            "Everyone is a different Reality TV Star. Go around the circle to introduce yourselves.",
            "Everyone is a Past President. Go around the circle to introduce yourselves.",
...
    static let card5 = Card(title: "5) Snapchat Paparazzi", short_title: "Snapchat Paparazzi", rule_description: "The Roller must secretly capture their opponents doing something weird on Snapchat at some point during the game (there should be plenty of opportunities). If you're the type of person that doesn't have a Snapchat, you can simply go get your photos developed at the local pharmacy after
    
    static let card6 = Card(title: "6) The Sneaky Texter", short_title: "The Sneaky Texter", rule_description: "The Roller now has the ability to text anyone in the game, at any time, a number from 1-5. If a person receives one of these messages from the Sneaky Texter, they are subject to the Loser Penalty times the number received in the text. However, if the Sneaky Texter is caught in the act of
    
    static let card7 = Card(title: "7) Make A Rule", short_title: "Make A Rule", rule_description: "The Roller may make a rule in which all players must follow. Violators of this sacred law shall be subject to public execution (or the Loser Penalty).", rules: nil, image: UIImage(named: "make_a_rule.png")!)
    
    static let card8 = Card(title: "8) Tunes Master", short_title: "Tunes Master", rule_description: "Sorry guys, like a cut-rate wedding DJ hired off craigslist, The Roller gets to impose their shitty music on everyone for the remainder of the game (keep in mind that if it gets too bad there are Pen Island playlists available on Spotify @ thepenislandgame).", rules: nil, image: UIImage(named: "tu
    
    static let card9 = Card(title: "9) Bad Categories", short_title: "Bad Categories - Group Game", rule_description: "Group Game - The Roller will draw a random Bad Category below. Beginning with person to The Roller's left, all players must say a relevant answer. No repeats. 1st player to mess up is subject to double the Loser Penalty.", rules: [
        "Things that Boobs feel like",
        "Names of People you've made out with",
        "Things that resemble a penis",
        "Places you wouldn't want to be caught having sex",
...
        "Wave Master (spontaneously start the wave)",
        "Raindance Master (spontaneously start doing a tribal rain dance)",
        "Choo-choo Master (spontaneously start making a choo-choo train gesture)",
        "Knock Master (spontaneously start knocking on something)",
        "Jerk-off Master (spontaneously start doing a jerk-off motion)",], image: UIImage(named: "the_cult_leader.png")!)
    
    static let card13 = Card(title: "13) The Most Likely To", short_title: "The Most Likely To - Group Game", rule_description: "Group Game - The Roller will draw a \"Most Likely To\" category below. On the Roller's count of 3, everyone will point to the person who is most likely to do that thing. The person with the most votes is subject to triple the Loser Penalty and definitive proof that they 
        "Join a nudist colony",
        "Drive a mini van in 10 years",
        "Fall in love with a waffle house worker",
        "Secretly have their nipples pierced",
        "Regularly eat at Arby's",
        "Hook up with someone at this table tonight",
...
        "Michael Jackson (\"That's ignorant. Eee-hee!\")",
        "Yoda (\"Talk like this, you must\")",
        "Canadian (\"Let's just go play some hockey, eh?\")",], image: UIImage(named: "accents.png")!)
    
    static let card29 = Card(title: "29) Lick, Slap, Fondle", short_title: "Lick, Slap, Fondle", rule_description: "As if things couldn't get any weirder, it's about to go to the next level. The Roller must Lick, Slap, or Fondle the 3 players to their left. Roller's choice of who gets what.", rules: nil, image: UIImage(named: "lick_slap_fondle.png")!)
    
    static let card30 = Card(title: "30) Go Back 15 Spaces", short_title: "Go Back 15 Spaces", rule_description: "Aw, so close! The Roller must move backward 15 spaces.", rules: nil, image: UIImage(named: "go_back_15_spaces.png")!)
    
    static let card31 = Card(title: "Pen15) #Penisland #Pen15club", short_title: "#Penisland #Pen15club", rule_description: "Upon arrival on beautiful Pen island, you are required to join the exclusive \"Pen15 Club\" (this means 'Pen15' is written on your hand in case you lived under a rock in elementary school). The person to the Roller's right may do the honors at the size of their discretion. P
    
    static let card32 = Card(title: "Pen16) The Roast", short_title: "The Roast", rule_description: "Beginning with the person to the left, everyone must insult The Roller. 1 Loser Penalty to ease the pain of every sick burn received. Finish every insult with an enthusiastic \"Boom, roasted.\"", rules: nil, image: UIImage(named: "the_roast.png")!)
    
    static let card33 = Card(title: "Pen17) Lip Sync Star", short_title: "Lip Sync Star", rule_description: "The Roller must perform 30 seconds of a concert quality lip sync show from the next song chosen by whoever's in charge of the music. Channel that inner Beyonce! ", rules: nil, image: UIImage(named: "lip_sync_star.png")!)
...
