...
                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="Palm Tree Background Image" translatesAutoresizingMaskIntoConstraints="NO" id="GDk-uU-fsI"/>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gld-5T-4kH">
                                <subviews>
                                    <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q5M-Jb-XBd">
                                        <subviews>
                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" verticalCompressionResistancePriority="751" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="CXa-cY-qcb"/>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="252" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskInto
                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="JnB-M9-CID"/>
                                                    <constraint firstAttribute="height" constant="200" id="aGS-YP-yZd">
                                                        <variation key="heightClass=regular-widthClass=regular" constant="60"/>
                                                    </constraint>
...
                                                    </mask>
                                                </variation>
                                                <connections>
                                                    <segue destination="emk-k8-Fq8" kind="presentation" id="IzJ-Ch-BOs"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskInto
                                                <color key="backgroundColor" red="0.93333333333333335" green="0.40784313725490196" blue="0.46666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="120" id="Cq2-RZ-XZh">
                                                        <variation key="heightClass=regular-widthClass=regular" constant="60"/>
                                                    </constraint>
                                                </constraints>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="XUf-IB-dvB"/>
                                    <constraint firstAttribute="height" constant="45" id="jY0-n5-IeE"/>
                                    <constraint firstAttribute="width" constant="300" id="yVi-y9-gae"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="Generate Random">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="XUf-IB-dvB"/>
                                    </mask>
...
